feat: streamline error handling by using getFirst() for lint errors in SnippetService